# caiso-forecasting

./: .gitignore  README.md  pyproject.toml
notebooks/: eda.ipynb  poc.ipynb
scripts/: build_full_dataset.py  create_full_dataset.py
