[tool.poetry]
name = "forecaiso"
version = "0.1.0"
description = ""
authors = ["joypauls <joypaulsen3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3.0"
numpy = "^2.3.0"
matplotlib = "^3.10.3"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
